--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -158,7 +158,6 @@ p {
 
 .mainGallery {
     @include grid-set (main, none, 1.2rem, 0.5rem);
-    display: none
 }
 
 .item1 {
@@ -168,6 +167,8 @@ p {
 .itemImage {
     width: 100%;
     border-radius: 2rem;
+    border: 3px solid $colorSecundarioMenu;
+    box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1);
 }
 .itemInfo{
     text-align: center;
