--- a/css/main.css
+++ b/css/main.css
@@ -265,6 +265,15 @@ p {
   grid-area: main;
   display: none; }
 
+.itemImage {
+  width: 100%;
+  border-radius: 2rem;
+  border: 3px solid #94bbe9;
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); }
+
+.itemInfo {
+  text-align: center; }
+
 .item1 {
   grid-area: imagen1;
   margin: 0.5rem;
@@ -278,15 +287,6 @@ p {
     width: 100%;
     transform: rotate(0deg);
     color: black; }
-
-.itemImage {
-  width: 100%;
-  border-radius: 2rem;
-  border: 3px solid #94bbe9;
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.1); }
-
-.itemInfo {
-  text-align: center; }
 
 .item2 {
   grid-area: imagen2;
@@ -325,6 +325,62 @@ p {
   color: transparent;
   transition: width 1s; }
   .item4:hover {
+    transition: width 1s;
+    width: 100%;
+    transform: rotate(0deg);
+    color: black; }
+
+.item5 {
+  grid-area: imagen5;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  width: 90%;
+  transform: rotate(-5deg);
+  color: transparent;
+  transition: width 1s; }
+  .item5:hover {
+    transition: width 1s;
+    width: 100%;
+    transform: rotate(0deg);
+    color: black; }
+
+.item6 {
+  grid-area: imagen6;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  width: 90%;
+  transform: rotate(-5deg);
+  color: transparent;
+  transition: width 1s; }
+  .item6:hover {
+    transition: width 1s;
+    width: 100%;
+    transform: rotate(0deg);
+    color: black; }
+
+.item7 {
+  grid-area: imagen7;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  width: 90%;
+  transform: rotate(-5deg);
+  color: transparent;
+  transition: width 1s; }
+  .item7:hover {
+    transition: width 1s;
+    width: 100%;
+    transform: rotate(0deg);
+    color: black; }
+
+.item8 {
+  grid-area: imagen8;
+  margin: 0.5rem;
+  padding: 0.5rem;
+  width: 90%;
+  transform: rotate(-5deg);
+  color: transparent;
+  transition: width 1s; }
+  .item8:hover {
     transition: width 1s;
     width: 100%;
     transform: rotate(0deg);
@@ -399,7 +455,7 @@ p {
     margin: 0.5rem;
     padding: 0.5rem;
     align-items: center;
-    grid-template-areas: "imagen1 imagen2" "imagen3 imagen4";
+    grid-template-areas: "imagen1 imagen2" "imagen3 imagen4" "imagen5 imagen6" "imagen7 imagen8";
     gap: 0.2rem; }
   .mainGalleryCarousel {
     display: none; } }
@@ -431,7 +487,7 @@ p {
     display: grid;
     margin: 1rem;
     padding: 1rem;
-    grid-template-areas: "imagen1 imagen2 imagen3 imagen4";
+    grid-template-areas: "imagen1 imagen2 imagen3 imagen4" "imagen5 imagen6 imagen7 imagen8";
     gap: 0.2rem; }
   .mainGalleryCarousel {
     display: none; } }
