--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -27,7 +27,9 @@
         @include grid-set (main,grid,0.5rem, 0.5rem);
         align-items: center;
         grid-template-areas: "imagen1 imagen2"
-            "imagen3 imagen4";
+            "imagen3 imagen4"
+            "imagen5 imagen6"
+            "imagen7 imagen8";
         gap: 0.2rem;
     }
 
@@ -61,7 +63,8 @@
 
     .mainGallery {
         @include grid-set (main,grid,1rem, 1rem);
-        grid-template-areas: "imagen1 imagen2 imagen3 imagen4";
+        grid-template-areas: "imagen1 imagen2 imagen3 imagen4"
+        "imagen5 imagen6 imagen7 imagen8";
         gap: 0.2rem;
     }
 
