--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,6 @@
 .containerPrincipal {
   display: grid;
   height: 100vh;
-  margin: 0.1rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 0.25fr 0.5fr 3fr 0.25fr;
   grid-template-areas: "header header header header" "nav nav nav nav" "main main main main" "footer footer footer footer"; }
@@ -22,6 +21,8 @@
   grid-area: header;
   margin: 1rem;
   padding: 1rem; }
+  .headerInit .parent {
+    display: grid; }
 
 .headerLogo {
   width: 8rem;
@@ -64,6 +65,8 @@
   border-radius: 2rem;
   background: linear-gradient(180deg, #94bbe9, #42C2FF);
   text-align: end; }
+  .footerInit .parent {
+    display: grid; }
   .footerInit h3 {
     font: bold;
     font-size: small; }
@@ -80,6 +83,8 @@
   border-radius: 1rem;
   color: black;
   font-size: 18px; }
+  .menu .parent {
+    display: grid; }
   .menu ul {
     display: flex;
     list-style-type: none; }
@@ -87,7 +92,6 @@
       list-style-type: none;
       position: relative; }
       .menu ul li:hover {
-        color: whitesmoke;
         font-weight: bold; }
       .menu ul li:hover > ul {
         display: block; }
@@ -119,6 +123,8 @@
   align-content: center;
   justify-content: center;
   justify-items: center; }
+  .mainInit .parent {
+    display: grid; }
 
 .mainInitP {
   grid-area: mainInitP;
@@ -126,6 +132,8 @@
   padding: 0.2rem;
   text-align: center;
   font-size: 1rem; }
+  .mainInitP .parent {
+    display: grid; }
 
 .mainInitVideo {
   grid-area: mainInitVideo;
@@ -133,6 +141,8 @@
   padding: 0.2rem;
   width: 100%;
   height: 40vh; }
+  .mainInitVideo .parent {
+    display: grid; }
 
 /*******************************************/
 /*Pagina Servicios Main*/
@@ -144,6 +154,8 @@
   justify-content: center space-between;
   align-items: center;
   grid-row-gap: 30px; }
+  .mainServices .parent {
+    display: grid; }
 
 /*contendor :tarjeta de los eventos
   Dentro de este
@@ -234,6 +246,8 @@ p {
   grid-template-areas: "mainAboutUsH2" "mainAboutUsImage" "mainAboutUsP";
   justify-content: center;
   justify-items: center; }
+  .mainAboutUs .parent {
+    display: grid; }
 
 .mainAboutUsImage {
   grid-area: mainAboutUsImage;
@@ -241,6 +255,8 @@ p {
   padding: 1rem;
   width: auto;
   border-radius: 2rem; }
+  .mainAboutUsImage .parent {
+    display: grid; }
 
 .mainAboutUsH2 {
   grid-area: mainAboutUsH2;
@@ -248,12 +264,16 @@ p {
   padding: 0.5rem;
   font-size: 25px;
   text-align: center; }
+  .mainAboutUsH2 .parent {
+    display: grid; }
 
 .mainAboutUsP {
   grid-area: mainAboutUsP;
   margin: 0.5rem;
   padding: 0.5rem;
   text-align: center; }
+  .mainAboutUsP .parent {
+    display: grid; }
 
 /***********************************************************/
 /*Pagina Galeria Main*/
@@ -262,10 +282,14 @@ p {
   grid-area: main;
   margin: 1.2rem;
   padding: 0.5rem; }
+  .mainGalleryCarousel .parent {
+    display: grid; }
 
 .mainGallery {
   grid-area: main;
   display: none; }
+  .mainGallery .parent {
+    display: grid; }
 
 .itemImage {
   width: 100%;
@@ -277,11 +301,8 @@ p {
   text-align: center; }
 
 .item1 {
-  grid-area: imagen1;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
-  transform: rotate(5deg);
+  transform: rotate(-5deg);
   color: transparent;
   transition: width 1s; }
   .item1:hover {
@@ -291,11 +312,8 @@ p {
     color: black; }
 
 .item2 {
-  grid-area: imagen2;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
-  transform: rotate(-5deg);
+  transform: rotate(5deg);
   color: transparent;
   transition: width 1s; }
   .item2:hover {
@@ -305,11 +323,8 @@ p {
     color: black; }
 
 .item3 {
-  grid-area: imagen3;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
-  transform: rotate(5deg);
+  transform: rotate(-5deg);
   color: transparent;
   transition: width 1s; }
   .item3:hover {
@@ -319,11 +334,8 @@ p {
     color: black; }
 
 .item4 {
-  grid-area: imagen4;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
-  transform: rotate(-5deg);
+  transform: rotate(5deg);
   color: transparent;
   transition: width 1s; }
   .item4:hover {
@@ -333,9 +345,6 @@ p {
     color: black; }
 
 .item5 {
-  grid-area: imagen5;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
   transform: rotate(-5deg);
   color: transparent;
@@ -347,11 +356,8 @@ p {
     color: black; }
 
 .item6 {
-  grid-area: imagen6;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
-  transform: rotate(-5deg);
+  transform: rotate(5deg);
   color: transparent;
   transition: width 1s; }
   .item6:hover {
@@ -361,9 +367,6 @@ p {
     color: black; }
 
 .item7 {
-  grid-area: imagen7;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
   transform: rotate(-5deg);
   color: transparent;
@@ -375,11 +378,8 @@ p {
     color: black; }
 
 .item8 {
-  grid-area: imagen8;
-  margin: 0.5rem;
-  padding: 0.5rem;
   width: 90%;
-  transform: rotate(-5deg);
+  transform: rotate(5deg);
   color: transparent;
   transition: width 1s; }
   .item8:hover {
@@ -398,6 +398,8 @@ p {
   flex-direction: column;
   align-content: center;
   justify-content: center; }
+  .mainReviews .parent {
+    display: grid; }
   .mainReviews h2 {
     font-size: 20px;
     text-align: center; }
@@ -413,22 +415,25 @@ p {
 
 /***********************************************************/
 /*Pagina Contacto*/
-/*Formulario*/
 .mainContact {
   grid-area: main;
   display: grid;
   margin: 1rem;
   padding: 1rem;
-  grid-template-areas: "formulario" "infoContact";
+  grid-template-areas: "formulario" "infoContact" "formulario" "infoContact";
   align-content: center;
   justify-content: center;
   justify-items: center; }
+  .mainContact .parent {
+    display: grid; }
 
 .infoContact {
   grid-area: infoContact;
   margin: 0.2rem;
   padding: 0.2rem;
   font-size: 1rem; }
+  .infoContact .parent {
+    display: grid; }
   .infoContact .tituloRedes {
     text-align: center; }
   .infoContact .linksRedes {
@@ -439,12 +444,16 @@ p {
     border-color: #6AA84F;
     border: 1px solid; }
 
+/*Formulario*/
 .infoFormulario {
-  /*@include grid-set (formulario, 0, 0.2rem, 0.2rem);
-    display: flex;
-    flex-direction: column;
-    align-items: center;*/
-  color: blue; }
+  grid-area: formulario;
+  margin: 0.2rem;
+  padding: 0.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .infoFormulario .parent {
+    display: grid; }
 
 .formulario {
   margin: 0.2rem;
@@ -467,6 +476,17 @@ p {
 @media screen and (min-width: 720px) {
   .menu {
     font-size: 18px; }
+  .mainContact {
+    grid-area: main;
+    display: grid;
+    margin: 1rem;
+    padding: 1rem;
+    grid-template-areas: "formulario infoContact" "formulario infoContact";
+    align-content: center;
+    justify-content: space-around;
+    justify-items: center; }
+    .mainContact .parent {
+      display: grid; }
   .mainAboutUs {
     grid-area: main;
     display: grid;
@@ -475,6 +495,8 @@ p {
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsP";
     justify-content: center;
     justify-items: center; }
+    .mainAboutUs .parent {
+      display: grid; }
   .mainServices {
     grid-area: main;
     display: grid;
@@ -486,20 +508,43 @@ p {
     align-items: center;
     grid-row-gap: 30px;
     grid-column-gap: 30px; }
+    .mainServices .parent {
+      display: grid; }
   .mainGallery {
     grid-area: main;
     display: grid;
     margin: 0.5rem;
     padding: 0.5rem;
     align-items: center;
-    grid-template-areas: "imagen1 imagen2" "imagen3 imagen4" "imagen5 imagen6" "imagen7 imagen8";
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    /*grid-template-areas: 
+            "imagen1 imagen2"
+            "imagen3 imagen4"
+            "imagen5 imagen6"
+            "imagen7 imagen8";
+            */
     gap: 0.2rem; }
+    .mainGallery .parent {
+      display: grid; }
   .mainGalleryCarousel {
     display: none; } }
 
 @media screen and (min-width: 1360px) {
   .menu {
     font-size: 20px; }
+  .mainContact {
+    grid-area: main;
+    display: grid;
+    margin: 1rem;
+    padding: 1rem;
+    grid-template-areas: "formulario infoContact";
+    grid-template-areas: "formulario infoContact";
+    align-content: center;
+    justify-content: space-around;
+    justify-items: center; }
+    .mainContact .parent {
+      display: grid; }
   .mainAboutUs {
     grid-area: main;
     display: grid;
@@ -508,6 +553,8 @@ p {
     grid-template-areas: "mainAboutUsH2 mainAboutUsH2 mainAboutUsH2" "mainAboutUsImage mainAboutUsImage mainAboutUsP" "mainAboutUsImage mainAboutUsImage mainAboutUsP";
     justify-content: center;
     justify-items: center; }
+    .mainAboutUs .parent {
+      display: grid; }
   .mainServices {
     grid-area: main;
     display: grid;
@@ -519,13 +566,20 @@ p {
     align-items: center;
     grid-row-gap: 30px;
     grid-column-gap: 30px; }
+    .mainServices .parent {
+      display: grid; }
   .mainGallery {
     grid-area: main;
     display: grid;
     margin: 1rem;
     padding: 1rem;
-    grid-template-areas: "imagen1 imagen2 imagen3 imagen4" "imagen5 imagen6 imagen7 imagen8";
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    /*grid-template-areas: "imagen1 imagen2 imagen3 imagen4"
+        "imagen5 imagen6 imagen7 imagen8";*/
     gap: 0.2rem; }
+    .mainGallery .parent {
+      display: grid; }
   .mainGalleryCarousel {
     display: none; } }
 
