--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -29,3 +29,8 @@ $containerHeight: 100vh;
 $sizeFontReviews:20px;
 $sizeFontReviewsP:20px;
 $sizeFontReviewsLi:15px;
+
+//Mediaquerys
+$widthTablet: 720px;
+$widthHD1360: 1360px;
+$cantGalleryItems: 8;
