--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -169,40 +169,18 @@ p {
     text-align: center;
 }
 
-.item1 {
-    @include grid-set (imagen1, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(5deg),black,width 1s);
-}
-
-.item2 {
-    @include grid-set (imagen2, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);
-}
-
-.item3 {
-    @include grid-set (imagen3, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(5deg),black,width 1s);
-}
-
-.item4 {
-    @include grid-set (imagen4, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);
-}
-.item5 {
-    @include grid-set (imagen5, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);
-}
-.item6 {
-    @include grid-set (imagen6, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);
-}
-.item7 {
-    @include grid-set (imagen7, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);
-}
-.item8 {
-    @include grid-set (imagen8, 0, 0.5rem, 0.5rem);
-    @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);
+@for $i from 1 through $cantGalleryItems{
+    @if $i%2 ==0{
+        .item#{$i}{
+            //@include grid-set (imagen#{$i}, 0, 0.5rem, 0.5rem);
+            @include gallery-item (90%,100%,rotate(5deg),black,width 1s);    
+        }
+    }@else{
+        .item#{$i}{
+            //@include grid-set (imagen#{$i}, 0, 0.5rem, 0.5rem);
+            @include gallery-item (90%,100%,rotate(-5deg),black,width 1s);    
+        }
+    }
 }
 
 
