--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,9 +1,19 @@
 /**********************************************************/
 /*MEDIA QUERY*/
-@media screen and (min-width: 720px) {
+@media screen and (min-width: $widthTablet) {
     .menu{
         font-size: 18px;    
     }
+
+    .mainContact {
+        @include grid-set (main, grid, 1rem, 1rem);
+        grid-template-areas: "formulario infoContact"
+                            "formulario infoContact";
+        align-content: center;
+        justify-content: space-around;
+        justify-items: center;
+    }
+
     .mainAboutUs {
         @include grid-set (main,grid,0.5rem, 0.5rem);
         grid-template-areas: "mainAboutUsH2 mainAboutUsH2"
@@ -26,10 +36,14 @@
     .mainGallery {
         @include grid-set (main,grid,0.5rem, 0.5rem);
         align-items: center;
-        grid-template-areas: "imagen1 imagen2"
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat($cantGalleryItems/2, 1fr);
+        /*grid-template-areas: 
+            "imagen1 imagen2"
             "imagen3 imagen4"
             "imagen5 imagen6"
             "imagen7 imagen8";
+            */
         gap: 0.2rem;
     }
 
@@ -38,9 +52,17 @@
     }
 }
 
-@media screen and (min-width: 1360px) {
+@media screen and (min-width: $widthHD1360) {
     .menu{
         font-size: 20px;    
+    }
+    .mainContact {
+        @include grid-set (main, grid, 1rem, 1rem);
+        grid-template-areas: "formulario infoContact";
+        grid-template-areas: "formulario infoContact";
+        align-content: center;
+        justify-content: space-around;
+        justify-items: center;
     }
     .mainAboutUs {
         @include grid-set (main,grid,1rem, 1rem);
@@ -63,8 +85,10 @@
 
     .mainGallery {
         @include grid-set (main,grid,1rem, 1rem);
-        grid-template-areas: "imagen1 imagen2 imagen3 imagen4"
-        "imagen5 imagen6 imagen7 imagen8";
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat($cantGalleryItems/4, 1fr);
+        /*grid-template-areas: "imagen1 imagen2 imagen3 imagen4"
+        "imagen5 imagen6 imagen7 imagen8";*/
         gap: 0.2rem;
     }
 
