--- a/scss/base/_mixins.scss
+++ b/scss/base/_mixins.scss
@@ -7,6 +7,10 @@
         margin: $margin;
         padding: $padding;
     }
+    .parent {
+        display: grid;
+        
+        }
 }
 
 @mixin gallery-item ($widthIni,$widthFin, $transform, $color, $transition) {
