--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,9 +1,9 @@
 .containerPrincipal {
     display: grid;
     height: $containerHeight;
-    //margin:0.1rem;
+    padding-bottom:5px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.25fr 0.5fr 3fr 0.25fr;
+    grid-template-rows: 0.25fr 0.5fr 3fr 0.1fr;
     grid-template-areas:    "header header header header"
                             "nav nav nav nav"
                             "main main main main"
