--- a/scss/base/_map.scss
+++ b/scss/base/_map.scss
@@ -1,6 +1,6 @@
 $colorLogo: (/*Declaracion de mapa*/
-    principal: #6AA84F,
-    secundario: #4AF873
+    principal: $colorPrincipalLogo,
+    secundario:$colorSecundarioLogo
 );
 
 $colorMenu: (/*Declaracion de mapa*/
