--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,7 +1,12 @@
+//Paleta de colores
+/*$colorPrincipalLogo: #6AA84F;
+$colorSecundarioLogo: #4AF873;*/
+
 //Header
-$colorPrincipalLogo: #6AA84F;
-$colorSecundarioLogo: #4AF873;
+$colorPrincipalLogo: #882D2Fff;
+$colorSecundarioLogo:#D1CAB8ff;
 $sizeFontLogo:20px;
+$colorFontLogo:black;
 
 //Menu
 $colorPrincipalMenu: #42C2FF;
@@ -26,7 +31,7 @@ $formFontSize: large;
 $containerHeight: 100vh;
 
 //Reviews
-$sizeFontReviews:20px;
+$sizeFontReviews:26px;
 $sizeFontReviewsP:20px;
 $sizeFontReviewsLi:15px;
 
@@ -34,3 +39,4 @@ $sizeFontReviewsLi:15px;
 $widthTablet: 720px;
 $widthHD1360: 1360px;
 $cantGalleryItems: 8;
+
