--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -49,5 +49,17 @@
 		color: $colorFontMenuHover;
         background: $colorSecundarioLogo;
 	}
-
+}
+.botonFormMenu{
+    width: 20px;
+    text-align: center;
+	border-radius: 7px;
+	border-bottom-left-radius: 0;
+	transition: all 0.4s;
+    background: white;
+	&:hover {
+		border-radius: 10px;
+		color: black;
+        background: white;
+	}
 }
