--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -24,7 +24,8 @@ a {
 }
 
 body {
-    background-image: url('../img/background2.png');
+    background-image: url('../img/background3.png');
+    background-color: white;// url('../img/background3.png');
     background-size:initial ;
     background-repeat: repeat;
     font-family: $fuentePagina;
